--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@
         // 🔐 SISTEMA PASSWORD MODERAZIONE
         let moderationAttempts = 3;
         let isModerationAuthenticated = false;
-        const MODERATION_PASSWORD = "admin123"; // Cambia questa password!
+        const MODERATION_PASSWORD = "Buryang67"; // Cambia questa password!
         
         // Soglia per sospensione automatica
         const REPORT_THRESHOLD = 3;
@@ -2508,3 +2508,4 @@
     </script>
 </body>
 </html>
+
